banner section add

--- a/index.html
+++ b/index.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Mission</title>
+    <!-- favicon  -->
+    <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
+    <!-- css link -->
+    <link rel="stylesheet" href="styles/index.css">
 </head>
+
 <body>
-    
+    <header>
+        <!-- banner section start -->
+        <section class="container banner-content">
+            <div class="banner-title">
+                <h3 class="banner-header1">Happy New Year</h3>
+                <h1 class="banner-header2">New Year Party Celebration</h1>
+            </div>
+        </section>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 </body>
+
 </html>
