65% discount offer add

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
                 <h1 class="banner-header2">New Year Party Celebration</h1>
             </div>
         </section>
+        <!-- banner section ends -->
     </header>
 
     <main>
-
+        <section class="discount-65">
+            <h1 class="offer-title">65% OFF</h1>
+            <h5 class="holiday-title">OUR HOLIDAY DEALS ARE BETTER</h5>
+            <h2 class="category-title">ALL CATEGORIES</h2>
+            <img class="discount-img" src="assets/images/New-Year-Photo.png" alt="Happy New Year" srcset="">
+        </section>
     </main>
 
     <footer>
