welcome party section add

--- a/index.html
+++ b/index.html
@@ -24,12 +24,27 @@
     </header>
 
     <main>
+        <!-- 65 offer section start -->
         <section class="discount-65">
             <h1 class="offer-title">65% OFF</h1>
             <h5 class="holiday-title">OUR HOLIDAY DEALS ARE BETTER</h5>
             <h2 class="category-title">ALL CATEGORIES</h2>
             <img class="discount-img" src="assets/images/New-Year-Photo.png" alt="Happy New Year" srcset="">
         </section>
+        <!-- 65 offer section ends -->
+
+        <!-- welcome midnight party start -->
+        <section class="welcome-party-container">
+            <div class="welcome-party-content">
+                <h2 class="welcome-party-title">Welcome to midnight party</h2>
+                <p class="welcome-party-text">Get ready to ring in the New Year with us! Join our midnight celebration filled with music, laughter, and unforgettable memories! </p>
+                <button>Join Now</button>
+            </div>
+            <div class="welcome-img">
+                <img src="assets/images/Group-70.png" alt="2024">
+            </div>
+        </section>
+        <!-- welcome midnight party ends -->
     </main>
 
     <footer>
