--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <section class="welcome-party-container">
             <div class="welcome-party-content">
                 <h2 class="welcome-party-title">Welcome to midnight party</h2>
-                <p class="welcome-party-text">Get ready to ring in the New Year with us! Join our midnight celebration filled with music, laughter, and unforgettable memories! </p>
+                <p class="welcome-party-text">Get ready to ring in the New Year with us! Join our midnight celebration
+                    filled with music, laughter, and unforgettable memories! </p>
                 <button>Join Now</button>
             </div>
             <div class="welcome-img">
@@ -45,6 +46,15 @@
             </div>
         </section>
         <!-- welcome midnight party ends -->
+
+        <!-- join now section start -->
+        <section class="join-now-container">
+            <p><span>Place:</span> New Park Hotel</p>
+            <p><span>Date:</span> 31 December Night 2023</p>
+            <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
+            <button>Join Now</button>
+        </section>
+        <!-- join now section ends -->
     </main>
 
     <footer>
