portfolio section add

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <h1 class="banner-header2">New Year Party Celebration</h1>
             </div>
         </section>
-        <!-- banner section ends -->
+        <!-- banner section end -->
     </header>
 
     <main>
@@ -31,7 +31,7 @@
             <h2 class="category-title">ALL CATEGORIES</h2>
             <img class="discount-img" src="assets/images/New-Year-Photo.png" alt="Happy New Year" srcset="">
         </section>
-        <!-- 65 offer section ends -->
+        <!-- 65 offer section end -->
 
         <!-- welcome midnight party start -->
         <section class="welcome-party-container">
@@ -45,7 +45,7 @@
                 <img src="assets/images/Group-70.png" alt="2024">
             </div>
         </section>
-        <!-- welcome midnight party ends -->
+        <!-- welcome midnight party end -->
 
         <!-- join now section start -->
         <section class="join-now-container">
@@ -54,7 +54,28 @@
             <p><span>Time:</span> Evening 7.30 pm to 12.30 am</p>
             <button>Join Now</button>
         </section>
-        <!-- join now section ends -->
+        <!-- join now section end -->
+
+        <!-- portfolio section start -->
+        <section class="portfolio-container">
+            <div class="portfolio-content">
+                <h3>THE BEST GIFTS</h3>
+                <h2>Our Awesome Portfolio</h2>
+                <p>Welcome to our portfolio, a captivating mosaic reflecting past achievements and illuminating the path
+                    forward with ambitious goals and innovative endeavors for the upcoming year. </p>
+            </div>
+            <div class="portfolio-img1">
+                <img src="assets/images/port-1.png" alt="">
+                <img src="assets/images/port-2.png" alt="">
+                <img src="assets/images/port-3.png" alt="">
+            </div>
+            <div class="portfolio-img2">
+                <img src="assets/images/port-4.png" alt="">
+                <img src="assets/images/port-5.png" alt="">
+                <img src="assets/images/port-6.png" alt="">
+            </div>
+        </section>
+        <!-- portfolio section end -->
     </main>
 
     <footer>
