subscribe section add

--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
             </div>
         </section>
         <!-- portfolio section end -->
+
+        <!-- subscribe section start -->
+        <section class="subscribe-container">
+            <img src="assets/images/Group-61.png" alt="">
+            <h1>Subscribe Newsletter</h1>
+            <p>Unlock the magic of the New Year by subscribing! Dive into a world of exclusive updates and thrilling surprises. </p>
+            <form>
+                <input type="email" name="" id="" placeholder="user@gmail.com">
+                <button>Subscribe</button>
+            </form>
+        </section>
+        <!-- subscribe section end -->
     </main>
 
     <footer>
