--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <section class="subscribe-container">
             <img src="assets/images/Group-61.png" alt="">
             <h1>Subscribe Newsletter</h1>
-            <p>Unlock the magic of the New Year by subscribing! Dive into a world of exclusive updates and thrilling surprises. </p>
+            <p>Unlock the magic of the New Year by subscribing! Dive into a world of exclusive updates and thrilling
+                surprises. </p>
             <form>
                 <input type="email" name="" id="" placeholder="user@gmail.com">
                 <button>Subscribe</button>
@@ -90,8 +91,26 @@
         <!-- subscribe section end -->
     </main>
 
-    <footer>
-        
+    <footer class="footer-container">
+        <section class="footer-contact-container">
+            <div class="footer-contact-add">
+                <p>44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410</p>
+            </div>
+            <div class="footer-contact-info">
+                <p>+00 123 584 124</p>
+                <p>www.website.com</p>
+            </div>
+        </section>
+        <section class="footer-icon">
+            <hr>
+            <div class="social-icons">
+                <img src="assets/icons/Facebook.png" alt="Facebook">
+                <img src="assets/icons/Instagram.png" alt="Instagram">
+                <img src="assets/icons/Linkedin.png" alt="Linkedin">
+                <img src="assets/icons/Twitter.png" alt="Twitter">
+            </div>
+        </section>
     </footer>
 </body>
 
