footer section add

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Mission</title>
+    <!--  -->
+    <script src="https://kit.fontawesome.com/65a6010dad.js" crossorigin="anonymous"></script>
     <!-- favicon  -->
     <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
     <!-- css link -->
@@ -98,8 +100,8 @@
                     Beach Gardens Florida 33410</p>
             </div>
             <div class="footer-contact-info">
-                <p>+00 123 584 124</p>
-                <p>www.website.com</p>
+                <p><i class="fa-solid fa-phone-volume"></i> +00 123 584 124</p>
+                <p><i class="fa-solid fa-globe"></i> www.website.com</p>
             </div>
         </section>
         <section class="footer-icon">
@@ -109,6 +111,11 @@
                 <img src="assets/icons/Instagram.png" alt="Instagram">
                 <img src="assets/icons/Linkedin.png" alt="Linkedin">
                 <img src="assets/icons/Twitter.png" alt="Twitter">
+            </div>
+            <hr>
+            <div class="footer-cpyright">
+                <p>2017, All Rights Reserved.</p>
+                <p>Unsubscribe</p>
             </div>
         </section>
     </footer>
