--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Mission</title>
-    <!--  -->
+    <!--font awesome  -->
     <script src="https://kit.fontawesome.com/65a6010dad.js" crossorigin="anonymous"></script>
     <!-- favicon  -->
     <link rel="shortcut icon" href="assets/icons/favicon.png" type="image/x-icon">
@@ -57,6 +57,24 @@
             <button>Join Now</button>
         </section>
         <!-- join now section end -->
+
+        <!-- coming soon section start -->
+        <section class="coming-soon-container">
+            <div class="coming-soon-item">
+                <h3>NEW BEST OFFER</h3>
+                <h1>Coming Soon</h1>
+                <p>Introducing our latest offer! Get ready to indulge in exclusive deals tailored just for you. Don't miss out—explore now and treat yourself to savings galore! </p>
+            </div>
+            <div class="coming-soon-img">
+                <img src="assets/images/Ellipse-1.png" alt="">
+            </div>
+            <div class="coming-soon-wish">
+                <h1>2024</h1>
+                <p>Warmest wishes for a joyful New Year! May it be filled with love, laughter, and endless blessings for you and yours.</p>
+                <img src="assets/images/Group-96.png" alt="">
+            </div>
+        </section>
+        <!-- coming soon section end -->
 
         <!-- portfolio section start -->
         <section class="portfolio-container">
