--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button>Join Now</button>
             </div>
             <div class="welcome-img">
-                <img src="assets/images/Group-70.png" alt="2024">
+                <img src="assets/images/Layer-1.png" alt="2024">
             </div>
         </section>
         <!-- welcome midnight party end -->
@@ -63,18 +63,32 @@
             <div class="coming-soon-item">
                 <h3>NEW BEST OFFER</h3>
                 <h1>Coming Soon</h1>
-                <p>Introducing our latest offer! Get ready to indulge in exclusive deals tailored just for you. Don't miss out—explore now and treat yourself to savings galore! </p>
+                <p>Introducing our latest offer! Get ready to indulge in exclusive deals tailored just for you. Don't
+                    miss out—explore now and treat yourself to savings galore! </p>
             </div>
             <div class="coming-soon-img">
                 <img src="assets/images/Ellipse-1.png" alt="">
             </div>
             <div class="coming-soon-wish">
                 <h1>2024</h1>
-                <p>Warmest wishes for a joyful New Year! May it be filled with love, laughter, and endless blessings for you and yours.</p>
+                <p>Warmest wishes for a joyful New Year! May it be filled with love, laughter, and endless blessings for
+                    you and yours.</p>
                 <img src="assets/images/Group-96.png" alt="">
             </div>
         </section>
         <!-- coming soon section end -->
+
+        <!-- holiday sale section start -->
+        <section class="holiday-sale-container">
+            <h5>WHAT IS FUNCTIONAL</h5>
+            <h2><span>Holidays</span> Sale 50%</h2>
+            <p>Join us in celebrating the holiday season with our spectacular sale event! Discover amazing discounts on a wide selection of products, from festive decorations to thoughtful gifts. Don't miss out on these unbeatable prices—shop now and save big!!</p>
+        </section>
+        <div class="holiday-sale-img">
+
+        </div>
+        <!-- holiday sale section end -->
+
 
         <!-- portfolio section start -->
         <section class="portfolio-container">
